# rps2-sdk

./: .gitignore  Cargo.toml  README.md  mips64el-ps2-elf.json
.cargo/: config.toml
rps2/: Cargo.toml
rps2-allocator/: Cargo.toml
rps2-allocator/src/: lib.rs
rps2-kernel/: Cargo.toml
rps2-kernel/src/: _atomics.rs  arch.rs  debug.rs  deci2.rs  env.rs  lib.rs  os.rs
rps2-libtest/: Cargo.toml
rps2-libtest/macros/: Cargo.toml
rps2-libtest/macros/src/: lib.rs
rps2-libtest/src/: args.rs  entry.rs  lib.rs  printer.rs  start.rs  test.rs
rps2-libtest/tests/: libtest_tests.rs
rps2-pac/: Cargo.toml
rps2-panic/: Cargo.toml
rps2-panic/src/: lib.rs
rps2-startup/: Cargo.toml  build.rs
rps2-startup/link/: link.x
rps2-startup/macros/: Cargo.toml
rps2-startup/macros/src/: lib.rs
rps2-startup/src/: lib.rs
rps2-tests/: Cargo.toml
rps2-tests/src/: main.rs  sync.rs
rps2-thread/: Cargo.toml
rps2-thread/src/: ffi.rs  lazy_lock.rs  lib.rs  mpmc.rs  mutex.rs  once.rs  once_lock.rs  sema.rs  thread.rs
rps2/src/: lib.rs
samples/hello-world/: Cargo.toml
samples/hello-world/src/: main.rs
scripts/: pcsx2.sh  runner-pcsx2-dbg.sh  runner-pcsx2.sh  runner-remote.sh
