[package]
name = "rps2-libtest"
version = "0.1.0"
edition = "2021"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[[test]]
name = "libtest_tests"
harness = false

[features]
no-entry = []

[dependencies]
rps2-libtest-macros = { path = "macros" }
rps2-kernel = { workspace = true, features = ["libtest-capture"] }
rps2-panic = { workspace = true }
rps2-startup = { workspace = true }
inventory = "0.3"
critical-section = "1"
getargs = { version = "0.5", default-features = false }