[package]
name = "rps2-startup"
version = "0.1.0"
edition = "2021"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[features]
default = ["alloc"]
alloc = ["dep:embedded-alloc", "rps2-kernel/critical-section"]

[dependencies]
rps2-startup-macros = { path = "macros" }
rps2-kernel = { workspace = true }
rps2-panic = { workspace = true }
embedded-alloc = { version = "0.6", optional = true }