[package]
name = "rps2-startup"
version = "0.1.0"
edition = "2021"
authors = ["Davide Mor <tazdevil971@gmail.com>"]

[features]
default = ["alloc"]
alloc = ["dep:rps2-allocator"]
no-start = []

[dependencies]
rps2-kernel = { workspace = true }
rps2-panic = { workspace = true }
rps2-allocator = { workspace = true, optional = true }